kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-symphony
spec:
  selector:
    app.kubernetes.io/name: pet-symphony
  ports:
    - name: http
      port: 80
      targetPort: http
