kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pet-symphony
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: pet-symphony.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pet-symphony
                port:
                  name: http
  tls:
    - hosts:
        - pet-symphony.example.com
      secretName: pet-symphony-tls
