kustomize/base/networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pet-symphony-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
